cpo see the register user details by userid
